samples/_failures_safe/1761212656_c5b134_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51769bab.c: In function ‘main’:
./samples/SAFE/__tmp_51769bab.c:157:13: error: expected declaration or statement at end of input
  157 |             }
      |             ^
./samples/SAFE/__tmp_51769bab.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_51769bab.c:157:13: error: expected declaration or statement at end of input
